# my-tools

./: .gitignore  README.md  main.py  pyproject.toml
cli_launcher/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
cli_launcher/src/: App.test.tsx  App.tsx  styles.css  types.ts
cli_launcher/src-tauri/: Cargo.toml  tauri.conf.json
cli_launcher/src-tauri/capabilities/: default.json
cli_launcher/src-tauri/icons/: icon.icns
cli_launcher/src-tauri/src/: lib.rs  main.rs
cli_launcher/src/components/: ClaudePanel.tsx  CliTabs.tsx  CodexPanel.tsx  ComingSoonPanel.tsx
cli_launcher/src/lib/: history.test.ts  history.ts  launch.test.ts  launch.ts
docs/superpowers/plans/: 2026-05-15-cli-launcher-tauri.md  2026-05-15-multi-tool-root-structure.md
docs/superpowers/specs/: 2026-05-15-cli-launcher-tauri-design.md  2026-05-15-multi-tool-root-structure-design.md
word2md/: __init__.py  gui.py  pyproject.toml
word2md/tests/: test_project_layout.py
word2md/word2md/: converter.py
