[package]
name = "cli_launcher"
version = "0.1.0"
description = "Launch code CLIs in Windows Terminal tabs"
edition = "2021"

[lib]
name = "cli_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
